<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Metronome.MetronomeFragment">

    <ImageButton
        android:id="@+id/btnPrevScale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrowback_24"
        android:contentDescription="@string/scale_back"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintEnd_toStartOf="@id/scaleImage"
        app:layout_constraintTop_toTopOf="@id/scaleImage"
        app:layout_constraintBottom_toBottomOf="@id/scaleImage"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/tvScaleName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Scale Name"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/scaleImage"
        app:layout_constraintStart_toStartOf="@id/scaleImage"
        app:layout_constraintEnd_toEndOf="@id/scaleImage"
        android:layout_marginBottom="4dp"/>

    <ImageView
        android:id="@+id/scaleImage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.8"
        android:src="@drawable/scale_15"
        android:contentDescription="@string/scale_diagram"
        app:layout_constraintBottom_toTopOf="@id/Metronome_Container_Frame"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="8dp"/>
    <ImageButton
        android:id="@+id/btnNextScale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrownext_24"
        android:contentDescription="@string/scale_next"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintStart_toEndOf="@id/scaleImage"
        app:layout_constraintTop_toTopOf="@id/scaleImage"
        app:layout_constraintBottom_toBottomOf="@id/scaleImage"
        android:layout_marginStart="8dp" />

    <FrameLayout
        android:id="@+id/Metronome_Container_Frame"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#DDDDDD"
        app:layout_constraintWidth_percent="0.6"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.3">

        <LinearLayout
            android:id="@+id/Metronome_Container_Linear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            tools:ignore="UselessParent">

            <View
                android:id="@+id/Metronome_circle1"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="8dp"
                android:background="@drawable/metronome_circle_off" />

            <View
                android:id="@+id/Metronome_circle2"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="8dp"
                android:background="@drawable/metronome_circle_off" />

            <View
                android:id="@+id/Metronome_circle3"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="8dp"
                android:background="@drawable/metronome_circle_off" />

            <View
                android:id="@+id/Metronome_circle4"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="8dp"
                android:background="@drawable/metronome_circle_off" />
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/bpmControls"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/Metronome_Container_Frame"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/BPM_Minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BPM_minus" />

        <TextView
            android:id="@+id/Now_BPM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginHorizontal="16dp" />

        <Button
            android:id="@+id/BPM_Plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BPM_plus" />
    </LinearLayout>

    <SeekBar
        android:id="@+id/bpmSeekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:max="270"
        android:progress="30"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/bpmControls"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/StartPause"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/bpmSeekBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/PlayBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Play_Start" />
    </LinearLayout>
=
    <LinearLayout
        android:id="@+id/timerControls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/StartPause"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tvTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00:00"
            android:textSize="16sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnTimerAdjust"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="설정"
            android:layout_marginStart="16dp"/>
    </LinearLayout>


<!-- 자율모드 / 크로매틱모드 선택 -->
    <RadioGroup
        android:id="@+id/WhatMode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/StartPause"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <RadioButton
            android:id="@+id/Mode_free"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/free_mode"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/Mode_chromatic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chromatic_mode"/>
    </RadioGroup>





</androidx.constraintlayout.widget.ConstraintLayout>